--- a/application/static/css/main.css
+++ b/application/static/css/main.css
@@ -41,8 +41,8 @@ hr {
 }
 
 input[type=text], input[type=password] {
-    width: 100%;
-    padding: 15px;
+    width: 60%;
+    padding: 7px;
     margin: 5px 0 22px 0;
     display: inline-block;
     border: none;
@@ -93,5 +93,8 @@ footer {
 }
 .btn-submit:hover {
     opacity: 1;
+}
+.error-message{
+    color: red;
 }
 
