Adding sessions and logout

--- a/application/static/css/main.css
+++ b/application/static/css/main.css
@@ -97,4 +97,12 @@ footer {
 .error-message{
     color: red;
 }
+.user{
+    float:right;
+    position:sticky;
+    font-size: 25px;
+    right:10em;
+    top:3em;
+    color:aqua
+}
 
